--- a/Qt/ChessSys/ui/commodityadddialog.ui
+++ b/Qt/ChessSys/ui/commodityadddialog.ui
@@ -163,6 +163,11 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="font">
+        <font>
+         <family>仿宋</family>
+        </font>
+       </property>
       </widget>
      </item>
      <item>
